fix overflow

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -29,3 +29,7 @@ a {
 .navbar .site-name{
     font-weight: bolder;
 }
+
+.custom-container{
+    overflow: hidden;
+}
